--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "mark-calc",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
